# winrt-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  appveyor.yml
Generator/: AssemblyCollection.cs  FeatureConditions.cs  Generator.cs  Generator.csproj  Generator.sln  GuidUtility.cs  ITracksDependencies.cs  MethodDef.cs  Module.cs  NameHelpers.cs  ParametricInterfaceInstance.cs  ParametricInterfaceManager.cs  Program.cs  TypeDef.cs  TypeHelpers.cs  packages.config
Generator/Properties/: AssemblyInfo.cs
Generator/Types/: ClassDef.cs  ClassMethodDef.cs  EnumDef.cs  ITypeRequestSource.cs  InterfaceDef.cs  MethodDef.cs  StructDef.cs  TypeDef.cs  TypeHelpers.cs  TypeKind.cs
examples/: async.rs  hexdump.rs  test.rs  toast_notify.rs
src/: bstr.rs  cominterfaces.rs  comptr.rs  guid.rs  handler.rs  hstring.rs  interop.rs  lib.rs  main.rs  result.rs  rt.rs
src/rt/: async.rs  async_util.rs  gen.rs  generated.rs  handler.rs  mod.rs
