[package]
name = "winrt"
version = "0.1.0"
authors = ["Patrick Reisert"]

[dependencies]
winapi = "0.2.8"
runtimeobject-sys = "0.2.0"
ole32-sys = "0.2.0"
oleaut32-sys = "0.2.0"

[features]
nightly = []
"windows.applicationmodel" = []
"windows.data" = []
"windows.devices" = []
"windows.gaming" = []
"windows.globalization" = []
"windows.graphics" = []
"windows.management" = []
"windows.media" = []
"windows.networking" = []
"windows.perception" = []
"windows.security" = []
"windows.services" = []
"windows.storage" = []
"windows.system" = []
"windows.ui" = []
"windows.ui.xaml" = ["windows.ui"]
"windows.web" = []
"all" = ["windows.applicationmodel", "windows.data", "windows.devices", "windows.gaming",
         "windows.globalization", "windows.graphics", "windows.management", "windows.media",
         "windows.networking", "windows.perception", "windows.security", "windows.services",
         "windows.storage", "windows.system", "windows.ui", "windows.ui.xaml", "windows.web"]
